--- a/SportsCards/SportsCards/Base.lproj/Main.storyboard
+++ b/SportsCards/SportsCards/Base.lproj/Main.storyboard
@@ -127,7 +127,7 @@
                                     </constraints>
                                 </view>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TeamStats" id="bvh-2p-0Q8" customClass="EditableTableViewCell" customModule="SportsCards" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EditableTableViewCell" id="bvh-2p-0Q8" customClass="EditableTableViewCell" customModule="SportsCards" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bvh-2p-0Q8" id="Sp6-XF-fCu">
